# ez-reset-go

./: README.go.md  README.md  build-windows.sh  go.mod  main.go  wails.json
frontend/: index.html  main.js  package-lock.json  style.css
internal/app/: app.go  app_test.go
internal/control/: control.go  errors.go
internal/status/: status.go
internal/transport/: enumerate_other.go  enumerate_windows.go  setupdi_windows.go  transport.go  usbprint_other.go  usbprint_windows.go
resetcplusplus/: .gitignore  CMakeLists.txt  README.md  build-windows.sh  toolchain-mingw.cmake
resetcplusplus/include/: d4.h  devices.h  mainwindow.h  printer.h  status.h  transport.h  utils.h
resetcplusplus/src/: d4.cpp  devices.cpp  main.cpp  mainwindow.cpp  printer.cpp  status.cpp  transport.cpp  utils.cpp
resetgo/: .gitignore  README.go.md  build-windows.sh  main.go  wails.json
resetgo/frontend/: index.html  main.js  package.json  package.json.md5  style.css  vite.config.js
resetgo/frontend/wailsjs/go/: models.ts
resetgo/frontend/wailsjs/go/app/: App.d.ts  App.js
resetgo/internal/app/: app.go
resetgo/internal/d4/: d4.go
resetgo/internal/devices/: devices.go
resetgo/internal/end4/: end4.go
resetgo/internal/printer/: printer.go
resetgo/internal/utils/: utils.go
